Implement search participant
